--- a/profile-remover-javafx/pom.xml
+++ b/profile-remover-javafx/pom.xml
@@ -35,12 +35,7 @@
       <version>5.9</version>
     </dependency>
 
-    <!-- LDAP -->
-    <dependency>
-      <groupId>com.unboundid</groupId>
-      <artifactId>unboundid-ldapsdk</artifactId>
-      <version>6.0.11</version>
-    </dependency>
+
 
     <!-- Logging -->
     <dependency>
@@ -93,6 +88,40 @@
         <configuration>
           <mainClass>com.example.profileremover.MainApp</mainClass>
         </configuration>
+      </plugin>
+      
+      <!-- Maven Shade Plugin per creare JAR eseguibile con dipendenze -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.example.profileremover.MainApp</mainClass>
+                </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+              </transformers>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+              <finalName>profile-remover-javafx-executable</finalName>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
